--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -186,9 +186,7 @@ Author=jekovcar
 [DIALOG_29]
 0=Действия
 3=Действие след сканиране
-4=Задайте команда, да се изпълни след сканиране на носителя.
-5=&Променливи >
-6=&Преглед...
+4=Задайте команда, да се изпълни след сканиране на носителя. <a>Supported macros</a>.
 
 [DIALOG_A]
 0=Актуализация софтуер
@@ -363,3 +361,4 @@ Author=jekovcar
 145=Пауза на операцията
 146=Възобнови операцията
 147=Програми
+148=Busy
