--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -186,9 +186,7 @@ Author=Tanuki
 [DIALOG_29]
 0=动作
 3=扫描后动作
-4=指定在扫描媒体后运行的命令。
-5=变量(&M)
-6=浏览(&B)...
+4=指定打开碟片后自动运行的命令。<a>支持的宏变量</a>.
 
 [DIALOG_A]
 0=软件更新
@@ -363,3 +361,4 @@ Author=Tanuki
 145=暂停操作
 146=恢复操作
 147=程序
+148=忙
