--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -186,9 +186,7 @@ Author=The Punisher
 [DIALOG_29]
 0=Aktionen
 3=Aktion nach dem Scannen
-4=Erstellen oder laden Sie hier einen Befehl der nach dem Scannen einer Datei ausgeführt werden soll.
-5=&Makros >>
-6=&Suchen...
+4=Erstellen oder laden Sie hier einen Befehl der nach dem Scannen einer Datei ausgeführt werden soll. <a>Supported macros</a>.
 
 [DIALOG_A]
 0=Software-Update
@@ -363,3 +361,4 @@ Author=The Punisher
 145=Vorgang pausieren
 146=Vorgang fortsetzen
 147=Programme
+148=Busy
