--- a/Xreveal_FIN.ini
+++ b/Xreveal_FIN.ini
@@ -186,9 +186,7 @@ Author=TJL
 [DIALOG_29]
 0=Actions
 3=Post-Scan action
-4=Specify a command to run after scanning media.
-5=&Variables >
-6=&Browse...
+4=Specify a command to run after scanning media. <a>Supported macros</a>.
 
 [DIALOG_A]
 0=Ohjelmistopäivitys
@@ -363,3 +361,4 @@ Author=TJL
 145=Pause the operation
 146=Resume the operation
 147=Ohjelmat
+148=Busy
