--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -186,9 +186,7 @@ Author=Andex
 [DIALOG_29]
 0=Actions
 3=Actions Post-Scan
-4=Spécifiez une commande à exécuter après le scan d'un média:
-5=&Variables >
-6=&Commande...
+4=Spécifiez une commande à exécuter après le scan d'un média. <a>Supported macros</a>.
 
 [DIALOG_A]
 0=Mise à jour
@@ -363,3 +361,4 @@ Author=Andex
 145=Mettre la copie en pause
 146=Continuer la copie...
 147=Programmes
+148=Busy
