--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -186,9 +186,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 [DIALOG_29]
 0=Actions
 3=Post-Scan action
-4=Specify a command to run after scanning media.
-5=&Variables >
-6=&Browse...
+4=Specify a command to run after opening disc. <a>Supported macros</a>.
 
 [DIALOG_A]
 0=Pembaruan Perangkat Lunak
@@ -363,3 +361,4 @@ Author= Lieba Natur Brilian (naturbrilian)
 145=Pause the operation
 146=Resume the operation
 147=Program
+148=Busy
