--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -186,9 +186,7 @@ Author=Re*Index.(ot_inc)
 [DIALOG_29]
 0=アクション
 3=スキャン後のアクション
-4=メディアをスキャン後に実行するコマンドを指定します。
-5=変数(&V) >
-6=参照(&B)...
+4=メディアをスキャン後に実行するコマンドを指定します。 <a>Supported macros</a>.
 
 [DIALOG_A]
 0=ソフトウェアのアップデート
@@ -363,3 +361,4 @@ Author=Re*Index.(ot_inc)
 145=操作を一時停止
 146=操作を再開
 147=プログラム
+148=Busy
