--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -186,9 +186,7 @@ Author=VenusGirl (비너스걸)
 [DIALOG_29]
 0=Actions
 3=Post-Scan action
-4=Specify a command to run after scanning media.
-5=&Variables >
-6=&Browse...
+4=Specify a command to run after scanning media. <a>Supported macros</a>.
 
 [DIALOG_A]
 0=소프트웨어 업데이트
@@ -363,3 +361,4 @@ Author=VenusGirl (비너스걸)
 145=작업 일시 중지
 146=작업 재개
 147=프로그램
+148=Busy
