--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -186,9 +186,7 @@ Author=jekovcar
 [DIALOG_29]
 0=Действия
 3=Действие после сканирования
-4=Укажите команду, которая будет выполняться после сканирования носителя.
-5=&Переменные >
-6=&Обзор...
+4=Укажите команду, которая будет выполняться после сканирования носителя. <a>Supported macros</a>.
 
 [DIALOG_A]
 0=Обновление программы
@@ -363,3 +361,4 @@ Author=jekovcar
 145=Приостановить операцию
 146=Возобновить операцию
 147=Программы
+148=Busy
