--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -186,9 +186,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 [DIALOG_29]
 0=Acciones
 3=Acción post-análisis
-4=Especifica un comando a ejecutar tras analizar los medios.
-5=&Variables >
-6=&Examinar...
+4=Especifica un comando a ejecutar tras analizar los medios. <a>Supported macros</a>.
 
 [DIALOG_A]
 0=Actualización de Software
@@ -363,3 +361,4 @@ Author=Steven Rogers, Leandro Botella Penalva
 145=Pausar la operación
 146=Reanudar la operación
 147=Programas
+148=Busy
