--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0409
 Name=English
-Version=2.7.4
+Version=2.7.5
 Author=
 1=OK
 2=Cancel
@@ -186,9 +186,7 @@ Author=
 [DIALOG_29]
 0=Actions
 3=Post-Scan action
-4=Specify a command to run after scanning media.
-5=&Variables >
-6=&Browse...
+4=Specify a command to run after opening disc. <a>Supported macros</a>.
 
 [DIALOG_A]
 0=Software Update
@@ -363,3 +361,4 @@ Author=
 145=Pause the operation
 146=Resume the operation
 147=Programs
+148=Busy
