--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -186,9 +186,7 @@ Author=Fresta
 [DIALOG_29]
 0=Actions
 3=Post-Scan action
-4=Specify a command to run after scanning media.
-5=&Variables >
-6=&Browse...
+4=Specify a command to run after scanning media. <a>Supported macros</a>.
 
 [DIALOG_A]
 0=Aktualizacja
@@ -363,3 +361,4 @@ Author=Fresta
 145=Pause the operation
 146=Resume the operation
 147=Programy
+148=Busy
