--- a/Xreveal_SLV.ini
+++ b/Xreveal_SLV.ini
@@ -186,9 +186,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 [DIALOG_29]
 0=Actions
 3=Post-Scan action
-4=Specify a command to run after scanning media.
-5=&Variables >
-6=&Browse...
+4=Specify a command to run after scanning media. <a>Supported macros</a>.
 
 [DIALOG_A]
 0=Posodobitev programa
@@ -363,3 +361,4 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 145=Pause the operation
 146=Resume the operation
 147=Programs
+148=Busy
