--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x040C
 Name=French (Français)
-Version=2.7.4
+Version=2.7.5
 Author=Andex
 1=OK
 2=Annuler
@@ -81,7 +81,7 @@ Author=Andex
 0=KeyDB
 3=Note: Xreveal ne contient aucune clé de déchiffrement!\nVous devez utiliser le fichier <a>KeyDB.cfg</a> pour que Xreveal puisse fonctionner.
 4=Emplacement du fichier 'KeyDB.cfg'
-6=&Rechercher la clé en ligne (Connexion Internet requise)
+6=&Rechercher la clé en ligne si non trouvée localement
 
 [DIALOG_13]
 0=Lecteurs
@@ -186,7 +186,7 @@ Author=Andex
 [DIALOG_29]
 0=Actions
 3=Actions Post-Scan
-4=Spécifiez une commande à exécuter après le scan d'un média. <a>Supported macros</a>.
+4=Spécifiez une commande à exécuter après le scan d'un média  <a>Macros supportées</a>
 
 [DIALOG_A]
 0=Mise à jour
@@ -361,4 +361,4 @@ Author=Andex
 145=Mettre la copie en pause
 146=Continuer la copie...
 147=Programmes
-148=Busy
+148=Occupé
