Update SPA to 2.7.5

--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x040A
 Name=Spanish (Español)
-Version=2.7.4
+Version=2.7.5
 Author=Steven Rogers, Leandro Botella Penalva
 1=Aceptar
 2=Cancelar
@@ -186,7 +186,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 [DIALOG_29]
 0=Acciones
 3=Acción post-análisis
-4=Especifica un comando a ejecutar tras analizar los medios. <a>Supported macros</a>.
+4=Especifica un comando a ejecutar tras abrir el disco. <a>Macros soportadas</a>.
 
 [DIALOG_A]
 0=Actualización de Software
@@ -361,4 +361,4 @@ Author=Steven Rogers, Leandro Botella Penalva
 145=Pausar la operación
 146=Reanudar la operación
 147=Programas
-148=Busy
+148=Ocupado
