--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0411
 Name=Japanese(日本語)
-Version=2.7.4.1
+Version=2.7.5
 Author=Re*Index.(ot_inc)
 1=OK
 2=キャンセル
@@ -361,4 +361,4 @@ Author=Re*Index.(ot_inc)
 145=操作を一時停止
 146=操作を再開
 147=プログラム
-148=Busy
+148=ビジー
