https://xreveal.com/translations-changelog.html

--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -59,6 +59,7 @@ Author=jekovcar
 9=Премахни ARccOS
 10=Прозрачност на субтитрите
 11=Xreveal се нуждае от <a>libdvdcss-2.dll</a>, за отваряне на DVD дискове.
+12=Disable AutoRun
 
 [DIALOG_11]
 0=Blu-ray
@@ -105,8 +106,6 @@ Author=jekovcar
 14=Създай &md5 файл с контролна сума
 15=Създай &dvdid.xml
 16=Създай лог файл
-17=RTF
-18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -362,3 +361,4 @@ Author=jekovcar
 146=Възобнови операцията
 147=Програми
 148=Busy
+149=&Check for updates
