--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0804
 Name=Chinese (简体中文)
-Version=2.7.4
+Version=2.7.6
 Author=Tanuki
 1=确定
 2=取消
@@ -59,6 +59,7 @@ Author=Tanuki
 9=移除 ARccOS
 10=透明度
 11=Xreveal 需要 <a>libdvdcss-2.dll</a> 才能打开 DVD.
+12=禁用 AutoRun
 
 [DIALOG_11]
 0=BD & UHD
@@ -105,8 +106,6 @@ Author=Tanuki
 14=创建 &md5 校验文件
 15=创建 &dvdid.xml
 16=创建日志文件
-17=RTF
-18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -362,3 +361,4 @@ Author=Tanuki
 146=恢复操作
 147=程序
 148=忙
+149=检查更新(&C)
