--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -59,6 +59,7 @@ Author=The Punisher
 9=ARccOS entfernen
 10=Untertitel-Transparenz
 11=Xreveal benötigt <a>libdvdcss-2.dll</a> um DVDs zu öffnen
+12=Disable AutoRun
 
 [DIALOG_11]
 0=BD & UHD
@@ -105,8 +106,6 @@ Author=The Punisher
 14=Erstelle &md5 checksum Datei
 15=Erstelle &dvdid.xml
 16=Erstelle Log Datei
-17=RTF
-18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -362,3 +361,4 @@ Author=The Punisher
 146=Vorgang fortsetzen
 147=Programme
 148=Beschäftigt
+149=&Check for updates
