--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0409
 Name=English
-Version=2.7.5
+Version=2.7.6
 Author=
 1=OK
 2=Cancel
@@ -59,6 +59,7 @@ Author=
 9=Remove &ARccOS
 10=&Subtitle transparency
 11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
+12=Disable AutoRun
 
 [DIALOG_11]
 0=BD & UHD
@@ -105,8 +106,6 @@ Author=
 14=Create &md5 checksum file
 15=Create &dvdid.xml
 16=Create log file
-17=RTF
-18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -362,3 +361,4 @@ Author=
 146=Resume the operation
 147=Programs
 148=Busy
+149=&Check for updates
