--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -59,6 +59,7 @@ Author=Andex
 9=Supprimer ARcc&OS (Advanced Regional copy control Operating Solution)
 10=&Transparence des sous-titres
 11=Note: vous devez utiliser le fichier <a>libdvdcss-2.dll</a> pour que Xreveal puisse ouvrir un DVD.
+12=Disable AutoRun
 
 [DIALOG_11]
 0=BD & UHD
@@ -105,8 +106,6 @@ Author=Andex
 14=Créer un fichier de contrôle &MD5
 15=Créer le fichier &dvdid.xml
 16=Créer un fichier journal
-17=RTF
-18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -362,3 +361,4 @@ Author=Andex
 146=Continuer la copie...
 147=Programmes
 148=Occupé
+149=&Check for updates
