--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -59,6 +59,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 9=Hapus &ARccOS
 10=&Transparan Takarir
 11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
+12=Disable AutoRun
 
 [DIALOG_11]
 0=Blu-ray
@@ -105,8 +106,6 @@ Author= Lieba Natur Brilian (naturbrilian)
 14=Buat checksum berkas &md5
 15=Buat &dvdid.xml
 16=Buat berkas log
-17=RTF
-18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -362,3 +361,4 @@ Author= Lieba Natur Brilian (naturbrilian)
 146=Resume the operation
 147=Program
 148=Busy
+149=&Check for updates
