--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -59,6 +59,7 @@ Author=Re*Index.(ot_inc)
 9=ARccOS を削除
 10=字幕を透過
 11=Xreveal で DVD を開くには <a>libdvdcss-2.dll</a> が必要です。
+12=Disable AutoRun
 
 [DIALOG_11]
 0=BD & UHD
@@ -105,8 +106,6 @@ Author=Re*Index.(ot_inc)
 14=MD5 チェックサムファイルを作成する(&M)
 15=dvdid.xml を作成する(&D)
 16=ログファイルを作成する
-17=RTF
-18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -362,3 +361,4 @@ Author=Re*Index.(ot_inc)
 146=操作を再開
 147=プログラム
 148=ビジー
+149=&Check for updates
