--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -59,6 +59,7 @@ Author=VenusGirl (비너스걸)
 9=ARccOS 제거
 10=자막 투명도
 11=Xreveal에서 DVD를 열려면 <a>libdvdcss-2.dll</a>이 필요합니다.
+12=Disable AutoRun
 
 [DIALOG_11]
 0=Blu-ray
@@ -105,8 +106,6 @@ Author=VenusGirl (비너스걸)
 14=MD5 체크섬 파일 생성(&M)
 15=dvdid.xml 만들기(&D)
 16=로그 파일 만들기
-17=RTF
-18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -362,3 +361,4 @@ Author=VenusGirl (비너스걸)
 146=작업 재개
 147=프로그램
 148=Busy
+149=&Check for updates
