--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -59,6 +59,7 @@ Author=Fresta
 9=Usuń ARccOS
 10=Przejrzystość Napisów
 11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
+12=Disable AutoRun
 
 [DIALOG_11]
 0=Blu-ray
@@ -105,8 +106,6 @@ Author=Fresta
 14=Create &md5 checksum file
 15=Create &dvdid.xml
 16=Create log file
-17=RTF
-18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -362,3 +361,4 @@ Author=Fresta
 146=Resume the operation
 147=Programy
 148=Busy
+149=&Check for updates
