--- a/Xreveal_SLV.ini
+++ b/Xreveal_SLV.ini
@@ -59,6 +59,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 9=Odstrani ARccOS
 10=Prosojnost podnapisov
 11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
+12=Disable AutoRun
 
 [DIALOG_11]
 0=Pogon Blu-ray
@@ -105,8 +106,6 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 14=Create &md5 checksum file
 15=Create &dvdid.xml
 16=Create log file
-17=RTF
-18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -362,3 +361,4 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 146=Resume the operation
 147=Programs
 148=Busy
+149=&Check for updates
