--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -59,6 +59,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 9=Eliminar &ARccOS
 10=&Transparencia de los subtítulos
 11=Xreveal necesita <a>libdvdcss-2.dll</a> para abrir DVDs.
+12=Disable AutoRun
 
 [DIALOG_11]
 0=BD y UHD
@@ -105,8 +106,6 @@ Author=Steven Rogers, Leandro Botella Penalva
 14=Crear archivo de suma de comprobación &md5
 15=Crear &dvdid.xml
 16=Crear archivo de registro
-17=RTF
-18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -362,3 +361,4 @@ Author=Steven Rogers, Leandro Botella Penalva
 146=Reanudar la operación
 147=Programas
 148=Ocupado
+149=&Check for updates
