--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -59,6 +59,7 @@ Author=jekovcar
 9=Удалить &ARccOS
 10=&Прозрачность субтитров
 11=Xreveal требуется <a>libdvdcss-2.dll</a> для открытия DVD-дисков.
+12=Disable AutoRun
 
 [DIALOG_11]
 0=Blu-ray
@@ -105,8 +106,6 @@ Author=jekovcar
 14=Создать файл контрольной суммы &md5
 15=Создать &dvdid.xml
 16=Создать файл журнала
-17=RTF
-18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -362,3 +361,4 @@ Author=jekovcar
 146=Возобновить операцию
 147=Программы
 148=Busy
+149=&Check for updates
