--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -59,6 +59,7 @@ Author=Sopor
 9=Ta bort ARccOS
 10=Transparens för undertexter
 11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
+12=Disable AutoRun
 
 [DIALOG_11]
 0=Bluray
@@ -105,8 +106,6 @@ Author=Sopor
 14=Create &md5 checksum file
 15=Create &dvdid.xml
 16=Create log file
-17=RTF
-18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -362,3 +361,4 @@ Author=Sopor
 146=Resume the operation
 147=Program
 148=Busy
+149=&Check for updates
