--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x040C
 Name=French (Français)
-Version=2.7.5
+Version=2.7.6
 Author=Andex
 1=OK
 2=Annuler
@@ -59,7 +59,7 @@ Author=Andex
 9=Supprimer ARcc&OS (Advanced Regional copy control Operating Solution)
 10=&Transparence des sous-titres
 11=Note: vous devez utiliser le fichier <a>libdvdcss-2.dll</a> pour que Xreveal puisse ouvrir un DVD.
-12=Disable AutoRun
+12=&Désactiver la lecture automatique
 
 [DIALOG_11]
 0=BD & UHD
@@ -255,16 +255,16 @@ Author=Andex
 40=&Statut
 41=&Ouvrir dans l'explorateur Windows
 42=&Créer un fichier d'informations
-43=&Vérifier un BD/UHD
-44=Copier dans un &dossier...
-45=Copier en &fichier ISO...
-46=&Activer/Désactiver
-47=&Désactiver
-48=&Paramètres...
+43=Vérifier un BD/UHD...
+44=&Copier dans un dossier...
+45=&Copier en fichier ISO...
+46=Activer/Désactiver
+47=
+48=Paramètres...
 49=&Commentaires
 50=&Outils
 51=À propos de &Xreveal
-52=&Quitter
+52=Quitter
 53=&Ejecter
 54=&Charger
 55=&Propriétés
@@ -327,7 +327,7 @@ Author=Andex
 112=Le dossier '%s' n'existe pas!\nVoulez-vous le créer?
 113=Quand fini:
 114=Ne rien faire
-115=,
+115=, 
 116=Ejecter le disque
 117=Lire un son
 118=Quitter Xreveal
@@ -361,4 +361,4 @@ Author=Andex
 146=Continuer la copie...
 147=Programmes
 148=Occupé
-149=&Check for updates
+149=Vérifier les mises à jour
