Update SPA to 2.7.6

--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x040A
 Name=Spanish (Español)
-Version=2.7.5
+Version=2.7.6
 Author=Steven Rogers, Leandro Botella Penalva
 1=Aceptar
 2=Cancelar
@@ -59,7 +59,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 9=Eliminar &ARccOS
 10=&Transparencia de los subtítulos
 11=Xreveal necesita <a>libdvdcss-2.dll</a> para abrir DVDs.
-12=Disable AutoRun
+12=Deshabilitar Ejecución Automática
 
 [DIALOG_11]
 0=BD y UHD
@@ -361,4 +361,4 @@ Author=Steven Rogers, Leandro Botella Penalva
 146=Reanudar la operación
 147=Programas
 148=Ocupado
-149=&Check for updates
+149=&Comprobar actualizaciones
