--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -59,7 +59,7 @@ Author=The Punisher
 9=ARccOS entfernen
 10=Untertitel-Transparenz
 11=Xreveal benötigt <a>libdvdcss-2.dll</a> um DVDs zu öffnen
-12=Disable AutoRun
+12=AutoRun deaktivieren
 
 [DIALOG_11]
 0=BD & UHD
@@ -185,7 +185,7 @@ Author=The Punisher
 [DIALOG_29]
 0=Aktionen
 3=Aktion nach dem Scannen
-4=Erstellen oder laden Sie hier einen Befehl der nach dem Scannen einer Datei ausgeführt werden soll. <a>Unterstütze Macros</a>
+4=Erstellen oder laden Sie hier einen Befehl der nach dem Scannen einer Datei ausgeführt werden soll. <a>Unterstützte Macros</a>
 
 [DIALOG_A]
 0=Software-Update
@@ -361,4 +361,4 @@ Author=The Punisher
 146=Vorgang fortsetzen
 147=Programme
 148=Beschäftigt
-149=&Check for updates
+149=Auf Updates &prüfen
