--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0412
 Name=Korean (한국어)
-Version=2.7.2
+Version=2.7.6
 Author=VenusGirl (비너스걸)
 1=확인
 2=취소
@@ -72,11 +72,11 @@ Author=VenusGirl (비너스걸)
 9=복사 제어 정보 제거
 10=BD-Live 사용 안 함
 11=연결된 3D 디스플레이 시뮬레이션
-12=Rename AACS &folder to
+12=AACS 폴더 이름 바꾸기(&F)
 13=AES 하드웨어 가속화 사용(&A)
 14=<a>북마크</a>
-15=Remove &annoying adverts and trailers
-16=Remove video sequences &shorter than %s minutes
+15=성가신 광고와 예고편 제거(&A)
+16=%s분보다 짧은 비디오 시퀀스 제거(&S)
 
 [DIALOG_12]
 0=KeyDB
@@ -183,9 +183,9 @@ Author=VenusGirl (비너스걸)
 6=파일이 성공적으로 생성되었습니다.
 
 [DIALOG_29]
-0=Actions
-3=Post-Scan action
-4=Specify a command to run after scanning media. <a>Supported macros</a>.
+0=동작
+3=포트 검색 동작
+4=미디어를 검색한 후 실행할 명령을 지정합니다. <a>지원되는 매크로</a>.
 
 [DIALOG_A]
 0=소프트웨어 업데이트
@@ -360,5 +360,5 @@ Author=VenusGirl (비너스걸)
 145=작업 일시 중지
 146=작업 재개
 147=프로그램
-148=Busy
-149=&Check for updates
+148=사용 중
+149=업데이트 확인(&C)
