--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -111,10 +111,10 @@ Author=Steven Rogers, Leandro Botella Penalva
 0=Xreveal
 3=Origen:
 4=Destino:
-6=Tiempo transcurrido:
-7=Tiempo restante:
+6=Transcurrido:
+7=Restante:
 8=Errores de lectura:
-9=Velocidad de lectura:
+9=Velocidad:
 
 [DIALOG_16]
 0=Región de las Unidades
@@ -190,7 +190,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 [DIALOG_A]
 0=Actualización de Software
 3=¡Una nueva versión de %s está disponible!
-4=%s ya está disponible - tu tienes %s. ¿Quieres descargarla ahora?
+4=%s ya está disponible - tu tienes la %s. ¿Quieres descargarla ahora?
 5=Notas de la versión:
 6=Omitir Esta Versión
 7=Recordarme Más Tarde
