--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -67,7 +67,7 @@ Author=jekovcar
 4=Премахни BD+
 5=Премахни RC (регионален код)
 6=Регионален код на диска:
-7=Код държава:
+7=Remove &country code
 8=Премахни UOPs (Забрани потребителски операции)
 9=Премахни CCI (Инфо контрол за копиране)
 10=Деактивирай BD-Live
@@ -350,7 +350,7 @@ Author=jekovcar
 135=Заявката за прекъсване е потвърдена
 136=Копиране...
 137=Про функция
-138=Актуализирайте лиценза
+138=Unregister
 139=Ще създаде защитен имидж файл. Файлът може да бъде четен само от виртуален диск, ако Xreveal е инсталиран и работи!\n\nДа продължи?
 140=Да изтрие непълния файл?\n\n%s
 141=Светла
@@ -362,3 +362,4 @@ Author=jekovcar
 147=Програми
 148=Busy
 149=&Check for updates
+150=&Save...
