--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0804
 Name=Chinese (简体中文)
-Version=2.7.6
+Version=2.7.8
 Author=Tanuki
 1=确定
 2=取消
@@ -67,7 +67,7 @@ Author=Tanuki
 4=移除 &BD+
 5=移除 R&C (区域码)
 6=光盘区域码:(&D)
-7=国家代码:(&C)
+7=移除国家码(&C)
 8=移除 &UOP (用户操作禁止)
 9=移除 &CCI (拷贝控制信息)
 10=禁止 BD-&Live
@@ -350,7 +350,7 @@ Author=Tanuki
 135=已确认中止请求
 136=正在复制...
 137=专业版功能
-138=更新注册码
+138=取消注册
 139=你将创建一带有加密保护的镜像。此文件需加载到虚拟光驱中，然后用Xreveal解密后再使用!\n\n你要继续吗?
 140=删除未完成的文件？\n\n%s
 141=白天
@@ -362,3 +362,4 @@ Author=Tanuki
 147=程序
 148=忙
 149=检查更新(&C)
+150=保存(&S)...
