--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -67,7 +67,7 @@ Author=The Punisher
 4=BD+ Schutz entfernen
 5=Region Code entfernen
 6=Disc-Region:
-7=Ländercode:
+7=Remove &country code
 8=Benutzereinschränkungen entfernen
 9=Copy-Control-Informationen entfernen
 10=BD-Live deaktivieren
@@ -350,7 +350,7 @@ Author=The Punisher
 135=Abbruchanfrage bestätigt
 136=Kopieren...
 137=Pro Ausstattungsmerkmal
-138=Lizenz erweitern
+138=Unregister
 139=Dieser Schritt erzeugt eine geschützte Image-Datei. Diese Datei kann auf einem virtuellen Laufwerk nur gelesen werden, wenn Xreveal installiert und gestartet ist !\n\nFortfahren ?
 140=Unvollständige Datei löschen ?\n\n%s
 141=Hell
@@ -362,3 +362,4 @@ Author=The Punisher
 147=Programme
 148=Beschäftigt
 149=Auf Updates &prüfen
+150=&Save...
