--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0409
 Name=English
-Version=2.7.6
+Version=2.7.8
 Author=
 1=OK
 2=Cancel
@@ -67,7 +67,7 @@ Author=
 4=Remove &BD+
 5=Remove &RC (Region Code)
 6=&Disc region code:
-7=&Country code:
+7=Remove &country code
 8=Remove &UOPs (User Operation Prohibitions)
 9=Remove &CCI (Copy Control Information)
 10=Disable BD-&Live
@@ -233,7 +233,7 @@ Author=
 18=Xreveal will not work if %s is running.\n\nDo you want to close it?
 19=Xreveal is scanning drive %C:
 20=The disc you have inserted will be available shortly, please wait!
-21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
+21=drive %C: is not in the on-the-fly decryption mode!\n\nFor more information, please refer to the Status window in Settings.
 22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=Copying %s...
 24=%.1f MB/s
@@ -350,7 +350,7 @@ Author=
 135=Aborted!
 136=Copying...
 137=Pro feature
-138=Update license
+138=Unregister
 139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed, and running!\n\nDo you want to continue?
 140=Delete incomplete file?\n\n%s
 141=Light
@@ -362,3 +362,4 @@ Author=
 147=Programs
 148=Busy
 149=&Check for updates
+150=&Save...
