--- a/Xreveal_FIN.ini
+++ b/Xreveal_FIN.ini
@@ -67,7 +67,7 @@ Author=TJL
 4=Poista BD+-suojaus
 5=Poista Blu-ray aluekoodi
 6=Aluekoodi:
-7=Maakoodi:
+7=Remove &country code
 8=Poista kielletyt käyttäjätoiminnot
 9=Poista kopioinnin hallintatiedot
 10=Poista käytöstä BD-Live
@@ -350,7 +350,7 @@ Author=TJL
 135=Aborted!
 136=Copying...
 137=Pro feature
-138=Update license
+138=Unregister
 139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed, and running!\n\nDo you want to continue?
 140=Delete incomplete file?\n\n%s
 141=Light
@@ -362,3 +362,4 @@ Author=TJL
 147=Ohjelmat
 148=Busy
 149=&Check for updates
+150=&Save...
