--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -67,7 +67,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 4=Hapus &BD+
 5=Hapus &RC (Region Code)
 6=&Kode region &Disk:
-7=&Kode negara:
+7=Remove &country code
 8=Hapus &UOPs (User Operation Prohibitions)
 9=Hapus &CCI (Copy Control Information)
 10=Nonaktifkan BD-&Live
@@ -350,7 +350,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 135=Aborted!
 136=Menyalin...
 137=Fitur pro
-138=Perbarui lisensi
+138=Unregister
 139=Anda segera membuat berkas image terproteksi. Berkas hanya bisa dibaca dari drive virtual, jika Xreveal terpasang dan berjalan!\n\nApakah anda ingin melanjutkan?
 140=Hapus berkas yang tidak selesai?\n\n%s
 141=Light
@@ -362,3 +362,4 @@ Author= Lieba Natur Brilian (naturbrilian)
 147=Program
 148=Busy
 149=&Check for updates
+150=&Save...
