--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -67,7 +67,7 @@ Author=bovirus (bovirus@gmail.com)
 4=Rimuovi &BD+
 5=Rimuovi &RC (codice regionale)
 6=Codice regione &disco:
-7=&Codice nazione:
+7=Remove &country code
 8=Rimuovi &UOP (proibizioni operazioni utente)
 9=Rimuo&vi CCI (Copy Control Information)
 10=Disabilita BD &Live
@@ -350,7 +350,7 @@ Author=bovirus (bovirus@gmail.com)
 135=Aborted!
 136=Copying...
 137=Pro feature
-138=Update license
+138=Unregister
 139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed, and running!\n\nDo you want to continue?
 140=Delete incomplete file?\n\n%s
 141=Light
@@ -362,3 +362,4 @@ Author=bovirus (bovirus@gmail.com)
 147=Programmi
 148=Busy
 149=&Check for updates
+150=&Save...
