--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -67,7 +67,7 @@ Author=Re*Index.(ot_inc)
 4=BD+ の解除
 5=Blu-ray のリージョンコードを削除
 6=ディスクのリージョン:
-7=リージョンコード:
+7=Remove &country code
 8=ユーザー操作禁止を解除
 9=コピーコントロール情報を削除
 10=BD-Live を無効化
@@ -350,7 +350,7 @@ Author=Re*Index.(ot_inc)
 135=処理の中止を承認しました
 136=コピー中...
 137=Pro 版の機能
-138=ライセンスを更新
+138=Unregister
 139=保護されたイメージファイルを作成します。ファイルは、Xreveal がインストールと実行がされている場合でのみ仮想ドライブから読み取ることができます！\n\n続行しますか？
 140=未完了のファイルを削除しますか？\n\n%s
 141=ライト
@@ -362,3 +362,4 @@ Author=Re*Index.(ot_inc)
 147=プログラム
 148=ビジー
 149=&Check for updates
+150=&Save...
