--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -67,7 +67,7 @@ Author=Fresta
 4=Usuń BD+
 5=Usuń RC (Region Code)
 6=Kod regionu płyty:
-7=Kod kraju:
+7=Remove &country code
 8=Usuń UOPs (User Operation Prohibitions)
 9=Usuń CCI (Copy Control Information)
 10=Wyłącz BD-Live
@@ -350,7 +350,7 @@ Author=Fresta
 135=Aborted!
 136=Copying...
 137=Pro feature
-138=Update license
+138=Unregister
 139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed, and running!\n\nDo you want to continue?
 140=Delete incomplete file?\n\n%s
 141=Light
@@ -362,3 +362,4 @@ Author=Fresta
 147=Programy
 148=Busy
 149=&Check for updates
+150=&Save...
