--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -67,7 +67,7 @@ Author=jekovcar
 4=Удалить &BD+
 5=Удалить &RC (код региона)
 6=&Код региона диска:
-7=&Код страны:
+7=Remove &country code
 8=Удалить &UOPs (запреты на действия пользователя)
 9=Удалить &CCI (информацию управления копированием)
 10=Отключить BD-&Live
@@ -350,7 +350,7 @@ Author=jekovcar
 135=Запрос на отмену подтвержден.
 136=Копирование...
 137=Профессиональная функция
-138=Обновить лицензию
+138=Unregister
 139=Создаст защищенный файл изображения. Файл можно будет читать только с виртуального диска, если Xreveal установлен и запущен!\n\nПродолжить?
 140=Удалить неполный файл?\n\n%s
 141=Светлая
@@ -362,3 +362,4 @@ Author=jekovcar
 147=Программы
 148=Busy
 149=&Check for updates
+150=&Save...
