--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -67,7 +67,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 4=Eliminar &BD+
 5=Eliminar &RC (Código de Región)
 6=&Código de región del disco:
-7=&Código de país:
+7=Remove &country code
 8=Eliminar &UOPs (Prohibiciones de Operaciones de Usuario)
 9=Eliminar &CCI (Información de Control de Copia)
 10=Deshabilitar BD-&Live
@@ -350,7 +350,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 135=¡Abortado!
 136=Copiando...
 137=Solo en Pro
-138=Actualizar licencia
+138=Unregister
 139=Vas a crear un archivo de imagen protegido. El archivo solo puede ser leído desde una unidad virtual si Xreveal está instalado y en ejecución!\n\n¿Quieres continuar?
 140=¿Eliminar archivo incompleto?\n\n%s
 141=Claro
@@ -362,3 +362,4 @@ Author=Steven Rogers, Leandro Botella Penalva
 147=Programas
 148=Ocupado
 149=&Comprobar actualizaciones
+150=&Save...
