--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -67,7 +67,7 @@ Author=Sopor
 4=Ta bort skyddet BD+
 5=Ta bort Bluray-regionskod
 6=Skivregion:
-7=Landskod:
+7=Remove &country code
 8=Ta bort förbjudna användaråtgärder
 9=Ta bort kopieringskontrollinformation
 10=Inaktivera BD-Live
@@ -350,7 +350,7 @@ Author=Sopor
 135=Aborted!
 136=Copying...
 137=Pro feature
-138=Update license
+138=Unregister
 139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed, and running!\n\nDo you want to continue?
 140=Delete incomplete file?\n\n%s
 141=Light
@@ -362,3 +362,4 @@ Author=Sopor
 147=Program
 148=Busy
 149=&Check for updates
+150=&Save...
