--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -67,7 +67,7 @@ Author=Andex
 4=Supprimer &BD+
 5=Supprimer &RC (Region Code)
 6=Région du &disque:
-7=Code du &pays:
+7=Remove &country code
 8=Supprimer &UOPs (User Operation Prohibitions)
 9=Supprimer &CCI (Copy Control Information)
 10=Désactiver BD-&Live
@@ -350,7 +350,7 @@ Author=Andex
 135=Demande d'abandon reconnue!
 136=Copie en cours...
 137=(Version Pro)
-138=Mise à jour de licence
+138=Unregister
 139=Vous allez créer un fichier image protégé!\nIl pourra être lu par un lecteur virtuel seulement si Xreveal est démarré!\n\nContinuer?
 140=Supprimer le fichier incomplet?\n\n%s
 141=Clair
@@ -362,3 +362,4 @@ Author=Andex
 147=Programmes
 148=Occupé
 149=Vérifier les mises à jour
+150=&Save...
