--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -67,7 +67,7 @@ Author=VenusGirl (비너스걸)
 4=BD+ 보호 제거
 5=Blu-ray 지역 코드 제거
 6=디스크 지역:
-7=국가 코드:
+7=Remove &country code
 8=금지된 사용자 작업 제거
 9=복사 제어 정보 제거
 10=BD-Live 사용 안 함
@@ -350,7 +350,7 @@ Author=VenusGirl (비너스걸)
 135=중단 요청 승인
 136=복사 중...
 137=Pro 기능
-138=라이선스 업데이트
+138=Unregister
 139=보호된 이미지 파일을 생성합니다. 파일은 Xreveal이 설치되어 실행 중인 경우에만 가상 드라이브에서 읽을 수 있습니다!\n\n계속하시겠습니까?
 140=불완전한 파일을 삭제하시겠습니까?\n\n%s
 141=밝은
@@ -362,3 +362,4 @@ Author=VenusGirl (비너스걸)
 147=프로그램
 148=사용 중
 149=업데이트 확인(&C)
+150=&Save...
