--- a/Xreveal_SLV.ini
+++ b/Xreveal_SLV.ini
@@ -67,7 +67,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 4=Odstrani BD+
 5=Odstrani RK (regionalno kodo)
 6=Regionalna koda zgoščenke:
-7=Koda države:
+7=Remove &country code
 8=Odstrani UOP-je (Prepovedane uporabniške operacije)
 9=Odstrani CCI (informacije o nadzoru kopiranja)
 10=Onemogoči BD-Live
@@ -350,7 +350,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 135=Aborted!
 136=Copying...
 137=Pro feature
-138=Update license
+138=Unregister
 139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed, and running!\n\nDo you want to continue?
 140=Delete incomplete file?\n\n%s
 141=Light
@@ -362,3 +362,4 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 147=Programs
 148=Busy
 149=&Check for updates
+150=&Save...
