--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x040C
 Name=French (Français)
-Version=2.7.6
+Version=2.7.8
 Author=Andex
 1=OK
 2=Annuler
@@ -67,7 +67,7 @@ Author=Andex
 4=Supprimer &BD+
 5=Supprimer &RC (Region Code)
 6=Région du &disque:
-7=Remove &country code
+7=Supprimer le code du &pays:
 8=Supprimer &UOPs (User Operation Prohibitions)
 9=Supprimer &CCI (Copy Control Information)
 10=Désactiver BD-&Live
@@ -105,7 +105,7 @@ Author=Andex
 13=&Vérifier l'intégrité des données
 14=Créer un fichier de contrôle &MD5
 15=Créer le fichier &dvdid.xml
-16=Créer un fichier journal
+16=Créer un fichier &journal
 
 [DIALOG_15]
 0=Xreveal
@@ -233,7 +233,7 @@ Author=Andex
 18=Xreveal ne fonctionnera pas si %s est en cours d'exécution.\n\nVoulez-vous fermer %s?
 19=Xreveal scanne le lecteur %C:
 20=Le disque sera disponible dans quelques instants, merci de patienter...
-21=Xreveal n'est pas activé pour le lecteur %C:!\n\nPour copier un disque protégé contre la copie, Xreveal doit être activé pour ce lecteur.
+21=Xreveal n'est pas activé pour le lecteur %C:!\n\nPour plus d'information, veuillez vous référer au 'Statut' dans les paramètres.
 22=Le dossier '%s' n'a pas assez d'espace libre!\nVous avez besoin de %s en plus.
 23=Copie de '%s' en cours...
 24=%.1f Mo/s
@@ -256,8 +256,8 @@ Author=Andex
 41=&Ouvrir dans l'explorateur Windows
 42=&Créer un fichier d'informations
 43=Vérifier un BD/UHD...
-44=&Copier dans un dossier...
-45=&Copier en fichier ISO...
+44=Copier dans un dossier...
+45=Copier en fichier ISO...
 46=Activer/Désactiver
 47=
 48=Paramètres...
@@ -313,9 +313,9 @@ Author=Andex
 98=&Importer un catalogue...
 99=
 100=Commentaire
-101=Vérifier un fichier ISO
-102=Vérifier un dossier
-103=Vérifier un lecteur
+101=Fichier
+102=Dossier
+103=Lecteur
 104=Bus Encryption possible
 105=%s (Lecteur: %s)
 106=Ouvrir le dossier '&log'
@@ -350,7 +350,7 @@ Author=Andex
 135=Demande d'abandon reconnue!
 136=Copie en cours...
 137=(Version Pro)
-138=Unregister
+138=Mise à jour de licence
 139=Vous allez créer un fichier image protégé!\nIl pourra être lu par un lecteur virtuel seulement si Xreveal est démarré!\n\nContinuer?
 140=Supprimer le fichier incomplet?\n\n%s
 141=Clair
@@ -362,4 +362,4 @@ Author=Andex
 147=Programmes
 148=Occupé
 149=Vérifier les mises à jour
-150=&Save...
+150=&Enregistrer...
