Add country code strings

--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -156,10 +156,6 @@ Author=jekovcar
 
 [DIALOG_24]
 0=Информация За Устройство
-3=Привод:
-4=Сериен номер:
-5=специфично за доставчика:
-6=Включи криптиране шина:
 
 [DIALOG_25]
 0=Импорт...
@@ -186,6 +182,11 @@ Author=jekovcar
 0=Действия
 3=Действие след сканиране
 4=Задайте команда, да се изпълни след сканиране на носителя. <a>Supported macros</a>.
+
+[DIALOG_30]
+0=Country code
+3=Country
+4=Code
 
 [DIALOG_A]
 0=Актуализация софтуер
