--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -156,10 +156,6 @@ Author=Tanuki
 
 [DIALOG_24]
 0=光驱信息
-3=光驱:
-4=序列号:
-5=厂商自定义:
-6=支持总线加密:
 
 [DIALOG_25]
 0=导入...
@@ -186,6 +182,11 @@ Author=Tanuki
 0=动作
 3=扫描后动作
 4=指定打开碟片后自动运行的命令。<a>支持的宏变量</a>.
+
+[DIALOG_30]
+0=国家码
+3=国家
+4=国家码
 
 [DIALOG_A]
 0=软件更新
