--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -156,10 +156,6 @@ Author=The Punisher
 
 [DIALOG_24]
 0=Laufwerk-Informationen
-3=Laufwerk:
-4=Seriennummer:
-5=Herstellerspezifisch:
-6=Bus-Verschlüsselungsfähig:
 
 [DIALOG_25]
 0=Importieren...
@@ -186,6 +182,11 @@ Author=The Punisher
 0=Aktionen
 3=Aktion nach dem Scannen
 4=Erstellen oder laden Sie hier einen Befehl der nach dem Scannen einer Datei ausgeführt werden soll. <a>Unterstützte Macros</a>
+
+[DIALOG_30]
+0=Country code
+3=Country
+4=Code
 
 [DIALOG_A]
 0=Software-Update
