--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -156,10 +156,6 @@ Author=Andex
 
 [DIALOG_24]
 0=Informations sur le lecteur
-3=Lecteur:
-4=N° de série:
-5=Fabricant:
-6=Bus Encryption:
 
 [DIALOG_25]
 0=Importer un catalogue...
@@ -186,6 +182,11 @@ Author=Andex
 0=Actions
 3=Actions Post-Scan
 4=Spécifiez une commande à exécuter après le scan d'un média  <a>Macros supportées</a>
+
+[DIALOG_30]
+0=Country code
+3=Country
+4=Code
 
 [DIALOG_A]
 0=Mise à jour
