--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -156,10 +156,6 @@ Author=Re*Index.(ot_inc)
 
 [DIALOG_24]
 0=ドライブの情報
-3=ドライブ:
-4=シリアル番号:
-5=固有ベンダー:
-6=バス暗号化の対応:
 
 [DIALOG_25]
 0=インポート...
@@ -186,6 +182,11 @@ Author=Re*Index.(ot_inc)
 0=アクション
 3=スキャン後のアクション
 4=メディアをスキャン後に実行するコマンドを指定します。 <a>Supported macros</a>.
+
+[DIALOG_30]
+0=Country code
+3=Country
+4=Code
 
 [DIALOG_A]
 0=ソフトウェアのアップデート
