--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -156,10 +156,6 @@ Author=VenusGirl (비너스걸)
 
 [DIALOG_24]
 0=드라이브 정보
-3=드라이브:
-4=일련 번호:
-5=공급업체별:
-6=버스 암호화 가능:
 
 [DIALOG_25]
 0=가져오기...
@@ -186,6 +182,11 @@ Author=VenusGirl (비너스걸)
 0=동작
 3=포트 검색 동작
 4=미디어를 검색한 후 실행할 명령을 지정합니다. <a>지원되는 매크로</a>.
+
+[DIALOG_30]
+0=Country code
+3=Country
+4=Code
 
 [DIALOG_A]
 0=소프트웨어 업데이트
