--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -156,10 +156,6 @@ Author=jekovcar
 
 [DIALOG_24]
 0=Информация о приводе
-3=Привод:
-4=Серийный номер:
-5=Зависит от поставщика:
-6=Шифрование шины возможно:
 
 [DIALOG_25]
 0=Импорт...
@@ -186,6 +182,11 @@ Author=jekovcar
 0=Действия
 3=Действие после сканирования
 4=Укажите команду, которая будет выполняться после сканирования носителя. <a>Supported macros</a>.
+
+[DIALOG_30]
+0=Country code
+3=Country
+4=Code
 
 [DIALOG_A]
 0=Обновление программы
