--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -156,10 +156,6 @@ Author=Steven Rogers, Leandro Botella Penalva
 
 [DIALOG_24]
 0=Información de la Unidad
-3=Unidad:
-4=Número de serie:
-5=Específico del fabricante:
-6=Capaz de cifrar el bus:
 
 [DIALOG_25]
 0=Importar...
@@ -186,6 +182,11 @@ Author=Steven Rogers, Leandro Botella Penalva
 0=Acciones
 3=Acción post-análisis
 4=Especifica un comando a ejecutar tras abrir el disco. <a>Macros soportadas</a>.
+
+[DIALOG_30]
+0=Country code
+3=Country
+4=Code
 
 [DIALOG_A]
 0=Actualización de Software
