--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -156,10 +156,6 @@ Author= Lieba Natur Brilian (naturbrilian)
 
 [DIALOG_24]
 0=Informasi Drive
-3=Drive:
-4=Nomer serial:
-5=Spesifikasi vendor:
-6=Bus encryption capable:
 
 [DIALOG_25]
 0=Impor...
@@ -186,6 +182,11 @@ Author= Lieba Natur Brilian (naturbrilian)
 0=Actions
 3=Post-Scan action
 4=Specify a command to run after opening disc. <a>Supported macros</a>.
+
+[DIALOG_30]
+0=Country code
+3=Country
+4=Code
 
 [DIALOG_A]
 0=Pembaruan Perangkat Lunak
