--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -156,10 +156,6 @@ Author=Sopor
 
 [DIALOG_24]
 0=Drive Information
-3=Drive:
-4=Serial number:
-5=Vendor specific:
-6=Bus encryption capable:
 
 [DIALOG_25]
 0=Import...
@@ -186,6 +182,11 @@ Author=Sopor
 0=Actions
 3=Post-Scan action
 4=Specify a command to run after scanning media. <a>Supported macros</a>.
+
+[DIALOG_30]
+0=Country code
+3=Country
+4=Code
 
 [DIALOG_A]
 0=Programuppdatering
