--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x040A
 Name=Spanish (Español)
-Version=2.7.6
+Version=2.7.8
 Author=Steven Rogers, Leandro Botella Penalva
 1=Aceptar
 2=Cancelar
@@ -67,7 +67,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 4=Eliminar &BD+
 5=Eliminar &RC (Código de Región)
 6=&Código de región del disco:
-7=Remove &country code
+7=Eliminar código de &país
 8=Eliminar &UOPs (Prohibiciones de Operaciones de Usuario)
 9=Eliminar &CCI (Información de Control de Copia)
 10=Deshabilitar BD-&Live
@@ -184,9 +184,9 @@ Author=Steven Rogers, Leandro Botella Penalva
 4=Especifica un comando a ejecutar tras abrir el disco. <a>Macros soportadas</a>.
 
 [DIALOG_30]
-0=Country code
-3=Country
-4=Code
+0=Código de país
+3=País
+4=Código
 
 [DIALOG_A]
 0=Actualización de Software
@@ -234,7 +234,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 18=Xreveal no funcionará si %s está en ejecución.\n\n¿Quieres cerrarlo?
 19=Xreveal está analizando la unidad %C:
 20=El disco que has insertado estará disponible en breve, ¡por favor, espera!
-21=Xreveal no está activo para la unidad %C:!\n\nPara copiar un disco protegido contra copias, Xreveal debe estar activo para la unidad.
+21=unidad %C: ¡no está en el modo de descifrado al vuelo!\n\nPara más información, consulta la ventana de Estado en Ajustes.
 22=¡El directorio '%s' no tiene espacio suficiente!\nNecesitas %s adicionales.
 23=Copiando %s...
 24=%.1f MB/s
@@ -351,7 +351,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 135=¡Abortado!
 136=Copiando...
 137=Solo en Pro
-138=Unregister
+138=Desregistrar
 139=Vas a crear un archivo de imagen protegido. El archivo solo puede ser leído desde una unidad virtual si Xreveal está instalado y en ejecución!\n\n¿Quieres continuar?
 140=¿Eliminar archivo incompleto?\n\n%s
 141=Claro
@@ -363,4 +363,4 @@ Author=Steven Rogers, Leandro Botella Penalva
 147=Programas
 148=Ocupado
 149=&Comprobar actualizaciones
-150=&Save...
+150=&Guardar...
