--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -184,8 +184,8 @@ Author=Andex
 4=Spécifiez une commande à exécuter après le scan d'un média  <a>Macros supportées</a>
 
 [DIALOG_30]
-0=Country code
-3=Country
+0=Codes de pays
+3=Pays
 4=Code
 
 [DIALOG_A]
@@ -351,7 +351,7 @@ Author=Andex
 135=Demande d'abandon reconnue!
 136=Copie en cours...
 137=(Version Pro)
-138=Mise à jour de licence
+138=Annuler la licence
 139=Vous allez créer un fichier image protégé!\nIl pourra être lu par un lecteur virtuel seulement si Xreveal est démarré!\n\nContinuer?
 140=Supprimer le fichier incomplet?\n\n%s
 141=Clair
