--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.7.5
+Version=2.7.7
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -65,9 +65,9 @@ Author=The Punisher
 0=BD & UHD
 3=&Blu-ray Unterstützung aktivieren
 4=BD+ Schutz entfernen
-5=Region Code entfernen
+5=Region-Code entfernen
 6=Disc-Region:
-7=Remove &country code
+7=&Länder-Code entfernen	
 8=Benutzereinschränkungen entfernen
 9=Copy-Control-Informationen entfernen
 10=BD-Live deaktivieren
@@ -149,7 +149,7 @@ Author=The Punisher
 1=Ja
 2=Nein
 3=Registrieren
-4=Es wurde keine passende Entschlüsselungsdatei in der KeyDB.cfg gefunden. Möchten Sie die Entschlüsselung in unserer Cloud ausprobieren ?
+4=Es wurde keine passende Entschlüsselungsdatei in der KeyDB.cfg gefunden. Möchten Sie die Entschlüsselung in unserer Cloud versuchen ?
 
 [DIALOG_23]
 0=Disc-Informationen
@@ -184,8 +184,8 @@ Author=The Punisher
 4=Erstellen oder laden Sie hier einen Befehl der nach dem Scannen einer Datei ausgeführt werden soll. <a>Unterstützte Macros</a>
 
 [DIALOG_30]
-0=Country code
-3=Country
+0=Ländercode
+3=Land
 4=Code
 
 [DIALOG_A]
@@ -220,7 +220,7 @@ Author=The Punisher
 4=5 - Russland, Ost-Europa und Afrika
 5=6 - China
 6=7 - Reserviert
-7=8 - Besondere internationale Venues (Flugzeuge, Kreuzfahrtschiffe etc.)
+7=8 - Besondere internationale Stätten (Flugzeuge, Kreuzfahrtschiffe etc.)
 8=A - Nord-Amerika, Mittel-Amerika, Süd-Amerika, Korea, Japan, Süd-Ost Asien
 9=B - Europa, Naher Osten, Afrika, Australien, Neuseeland
 10=C - Russland, Indien, China, Rest der Welt
@@ -343,15 +343,15 @@ Author=The Punisher
 127=WAV Dateien
 128=KeyDB Dateien
 129=Database Dateien
-130=Wählen oder kopieren Sie eine WAV hier
-131=Wählen oder kopieren Sie eine keyDB.cfg hier
+130=Wählen oder kopieren Sie eine WAV hierhin
+131=Wählen oder kopieren Sie eine keyDB.cfg hierhin
 132=%u%% komplett
 133=Lesefehler in Laufwerk %C:!\nSektoren: %u-%u
 134=Lesefehler %s!\nSektoren: %u-%u
 135=Abbruchanfrage bestätigt
 136=Kopieren...
-137=Pro Ausstattungsmerkmal
-138=Unregister
+137=Pro-Version Ausstattungsmerkmal
+138=Lizenz entfernen
 139=Dieser Schritt erzeugt eine geschützte Image-Datei. Diese Datei kann auf einem virtuellen Laufwerk nur gelesen werden, wenn Xreveal installiert und gestartet ist !\n\nFortfahren ?
 140=Unvollständige Datei löschen ?\n\n%s
 141=Hell
@@ -363,4 +363,4 @@ Author=The Punisher
 147=Programme
 148=Beschäftigt
 149=Auf Updates &prüfen
-150=&Save...
+150=&Speichern...
