--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0402
 Name=Bulgarian(Български)
-Version=2.7.4
+Version=2.7.8
 Author=jekovcar
 1=ОК
 2=Отказ
@@ -59,7 +59,7 @@ Author=jekovcar
 9=Премахни ARccOS
 10=Прозрачност на субтитрите
 11=Xreveal се нуждае от <a>libdvdcss-2.dll</a>, за отваряне на DVD дискове.
-12=Disable AutoRun
+12=Деактивирай АвтоСтарт
 
 [DIALOG_11]
 0=Blu-ray
@@ -351,7 +351,7 @@ Author=jekovcar
 135=Заявката за прекъсване е потвърдена
 136=Копиране...
 137=Про функция
-138=Unregister
+138=Разрегистрирай
 139=Ще създаде защитен имидж файл. Файлът може да бъде четен само от виртуален диск, ако Xreveal е инсталиран и работи!\n\nДа продължи?
 140=Да изтрие непълния файл?\n\n%s
 141=Светла
@@ -361,6 +361,6 @@ Author=jekovcar
 145=Пауза на операцията
 146=Възобнови операцията
 147=Програми
-148=Busy
-149=&Check for updates
-150=&Save...
+148=Зает
+149=&Провери за актуализации
+150=&Запиши...
