--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0419
 Name=Russian (Русский)
-Version=2.7.4
+Version=2.7.8
 Author=jekovcar
 1=ОК
 2=Отмена
@@ -59,7 +59,7 @@ Author=jekovcar
 9=Удалить &ARccOS
 10=&Прозрачность субтитров
 11=Xreveal требуется <a>libdvdcss-2.dll</a> для открытия DVD-дисков.
-12=Disable AutoRun
+12=Отключить автозапуск
 
 [DIALOG_11]
 0=Blu-ray
@@ -184,9 +184,9 @@ Author=jekovcar
 4=Укажите команду, которая будет выполняться после сканирования носителя. <a>Supported macros</a>.
 
 [DIALOG_30]
-0=Country code
-3=Country
-4=Code
+0=Код страны
+3=Страна
+4=Код
 
 [DIALOG_A]
 0=Обновление программы
@@ -351,7 +351,7 @@ Author=jekovcar
 135=Запрос на отмену подтвержден.
 136=Копирование...
 137=Профессиональная функция
-138=Unregister
+138=Отменить регистрацию
 139=Создаст защищенный файл изображения. Файл можно будет читать только с виртуального диска, если Xreveal установлен и запущен!\n\nПродолжить?
 140=Удалить неполный файл?\n\n%s
 141=Светлая
@@ -361,6 +361,6 @@ Author=jekovcar
 145=Приостановить операцию
 146=Возобновить операцию
 147=Программы
-148=Busy
-149=&Check for updates
-150=&Save...
+148=Занятой
+149=&Проверить обновления
+150=&Сохранить...
