--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -184,9 +184,9 @@ Author=jekovcar
 4=Задайте команда, да се изпълни след сканиране на носителя. <a>Supported macros</a>.
 
 [DIALOG_30]
-0=Country code
-3=Country
-4=Code
+0=Код на страната
+3=Държава
+4=Код
 
 [DIALOG_A]
 0=Актуализация софтуер
